@@ -1279,26 +1279,104 @@ return {
 -- root_dir kann nil sein
 -- jdtls braucht Java 17+ (je nach Version).
 
+-- return {
+--   {
+--     "mfussenegger/nvim-jdtls",
+--     ft = { "java" },
+--     dependencies = {
+--       "mason-org/mason.nvim",
+--       "mason-org/mason-lspconfig.nvim",
+--     },
+--     config = function()
+--       local jdtls = require("jdtls")
+--       local mason_path = vim.fn.stdpath("data") .. "/mason"
+--       local jdtls_path = mason_path .. "/packages/jdtls"
+
+--       local jar = vim.fn.glob(jdtls_path .. "/plugins/org.eclipse.equinox.launcher_*.jar")
+--       if jar == "" then
+--         vim.notify("jdtls jar not found. Install jdtls via Mason.", vim.log.levels.ERROR)
+--         return
+--       end
+
+--       -- config dir abhängig vom OS
+--       local os_config
+--       if vim.fn.has("macunix") == 1 then
+--         os_config = "config_mac"
+--       elseif vim.fn.has("win32") == 1 then
+--         os_config = "config_win"
+--       else
+--         os_config = "config_linux"
+--       end
+
+--       local config_dir = jdtls_path .. "/" .. os_config
+
+--       -- root_dir berechnen
+--       local root_dir = require("jdtls.setup").find_root({
+--         ".git", "mvnw", "gradlew", "pom.xml", "build.gradle"
+--       })
+
+--       if not root_dir then
+--         root_dir = vim.fn.getcwd()
+--       end
+
+--       -- Workspace eindeutig (hash des Pfades)
+--       local workspace_dir = vim.fn.stdpath("cache") .. "/jdtls/" .. vim.fn.sha256(root_dir)
+
+--       local config = {
+--         cmd = {
+--           "java",
+--           "-Declipse.application=org.eclipse.jdt.ls.core.id1",
+--           "-Dosgi.bundles.defaultStartLevel=4",
+--           "-Declipse.product=org.eclipse.jdt.ls.core.product",
+--           "-Dlog.protocol=true",
+--           "-Dlog.level=ALL",
+--           "-Xms1g",
+--           "--add-modules=ALL-SYSTEM",
+--           "--add-opens", "java.base/java.util=ALL-UNNAMED",
+--           "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+--           "-jar", jar,
+--           "-configuration", config_dir,
+--           "-data", workspace_dir,
+--         },
+--         root_dir = root_dir,
+--         settings = {
+--           java = {
+--             eclipse = { downloadSources = true },
+--             maven = { downloadSources = true },
+--             format = { enabled = true },
+--             referencesCodeLens = { enabled = true },
+--             implementationsCodeLens = { enabled = true },
+--           },
+--         },
+--       }
+
+--       jdtls.start_or_attach(config)
+--     end,
+--   },
+-- }
+
 return {
   {
     "mfussenegger/nvim-jdtls",
     ft = { "java" },
     dependencies = {
-      "mason-org/mason.nvim",
-      "mason-org/mason-lspconfig.nvim",
+      "williamboman/mason.nvim",
+      "williamboman/mason-lspconfig.nvim",
     },
     config = function()
       local jdtls = require("jdtls")
+
+      -- Pfad zu Mason
       local mason_path = vim.fn.stdpath("data") .. "/mason"
       local jdtls_path = mason_path .. "/packages/jdtls"
 
-      local jar = vim.fn.glob(jdtls_path .. "/plugins/org.eclipse.equinox.launcher_*.jar")
-      if jar == "" then
-        vim.notify("jdtls jar not found. Install jdtls via Mason.", vim.log.levels.ERROR)
+      local jar_files = vim.fn.glob(jdtls_path .. "/plugins/org.eclipse.equinox.launcher_*.jar", true, true)
+      local jar = jar_files[1]
+      if not jar or jar == "" then
+        vim.notify("JDTLS jar nicht gefunden. Bitte über Mason installieren.", vim.log.levels.ERROR)
         return
       end
 
-      -- config dir abhängig vom OS
       local os_config
       if vim.fn.has("macunix") == 1 then
         os_config = "config_mac"
@@ -1310,18 +1388,27 @@ return {
 
       local config_dir = jdtls_path .. "/" .. os_config
 
-      -- root_dir berechnen
       local root_dir = require("jdtls.setup").find_root({
         ".git", "mvnw", "gradlew", "pom.xml", "build.gradle"
-      })
+      }) or vim.fn.getcwd()
 
-      if not root_dir then
-        root_dir = vim.fn.getcwd()
-      end
-
-      -- Workspace eindeutig (hash des Pfades)
       local workspace_dir = vim.fn.stdpath("cache") .. "/jdtls/" .. vim.fn.sha256(root_dir)
 
+      local capabilities = vim.lsp.protocol.make_client_capabilities()
+      local cmp_ok, cmp_nvim_lsp = pcall(require, "cmp_nvim_lsp")
+      if cmp_ok then
+        capabilities = cmp_nvim_lsp.default_capabilities(capabilities)
+      end
+
+      local on_attach = function(client, bufnr)
+        local bufopts = { noremap = true, silent = true, buffer = bufnr }
+        vim.keymap.set("n", "K", vim.lsp.buf.hover, bufopts)
+        vim.keymap.set("n", "gd", vim.lsp.buf.definition, bufopts)
+        vim.keymap.set("n", "gr", vim.lsp.buf.references, bufopts)
+        vim.keymap.set("n", "<leader>ca", vim.lsp.buf.code_action, bufopts)
+      end
+
+      -- JDTLS Config
       local config = {
         cmd = {
           "java",
@@ -1339,6 +1426,8 @@ return {
           "-data", workspace_dir,
         },
         root_dir = root_dir,
+        capabilities = capabilities,
+        on_attach = on_attach,
         settings = {
           java = {
             eclipse = { downloadSources = true },
